# dbt-to-transforms

./: .gitignore  README.md  config.example.yaml  config.yaml  plan.json  pyproject.toml
dbt_to_metabase/: cli.py  config.py  data_validator.py  dbt_compiler.py  dependency_resolver.py  manifest_parser.py  metabase_client.py  migrator.py  models.py  sql_rewriter.py  transform_sql_adapter.py
dbt_to_metabase.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_data_validation.py
