[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-to-metabase"
version = "0.1.0"
description = "Migrate dbt models into Metabase Transforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses",  # mock HTTP requests
    "ruff",
]

[project.scripts]
dbt-to-metabase = "dbt_to_metabase.cli:main"

[tool.ruff]
line-length = 100
target-version = "py38"
